Costumer Lifetime Value.ipynb

--- a/Costumer Lifetime Value.ipynb
+++ b/Costumer Lifetime Value.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __<center>CAPSTONE PROJECT MODULE 3</center>__"
+    "# __<center>Regression: Customer Lifetime Value Prediction</center>__"
    ]
   },
   {
